[tool.poetry]
name = "peggle"
version = "0.1.0"
description = ""
authors = ["Maxim <chumakov-maksim1999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
pygame-gui = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
